添加页面头部信息

--- a/docs/.vuepress/theme/src/client/styles/mixins.scss
+++ b/docs/.vuepress/theme/src/client/styles/mixins.scss
@@ -1,4 +1,6 @@
 
-// @mixin reset-h2 {
-//   border: none;
-// }
+@mixin text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
