--- a/docs/.vuepress/theme/src/client/styles/index.scss
+++ b/docs/.vuepress/theme/src/client/styles/index.scss
@@ -9,9 +9,11 @@
 @use 'custom-container';
 @use 'dropdown';
 @use 'home';
+@use 'post';
 @use 'layout';
 @use 'navbar';
 @use 'page';
+@use 'pagination';
 @use 'sidebar';
 @use 'sr-only';
 @use 'toc';
