--- a/docs/.vuepress/theme/src/client/styles/page.scss
+++ b/docs/.vuepress/theme/src/client/styles/page.scss
@@ -38,22 +38,20 @@
   }
 }
 
-.page-header {
-  @extend %wrapper;
-  .page-title {
+.article-header {
+  padding: 1rem 0;
+  & > .title {
     margin: 1em 0 0;
     font-size: 2em;
     padding-bottom: 0;
     border: none;
-    // @include text-ellipsis;
   }
-  .meta {
+  & > .meta {
     padding-top: 1em;
     color: #909090;
     font-size: 14px;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
   }
   .author {
     color: var(--c-text);
