--- a/docs/.vuepress/theme/src/client/styles/post.scss
+++ b/docs/.vuepress/theme/src/client/styles/post.scss
@@ -3,14 +3,15 @@
   text-decoration: inherit;
   display: block;
   padding: 1.3rem 1.4rem;
-  transition: border-color 0.3s, color 0.3s;
+  transition: border-color 0.25s, color 0.25s, box-shadow 0.25s;
   border: 1px solid var(--c-border);
   border-radius: 6px;
   &:not(:last-child) {
     margin-bottom: 1.4rem;
   }
   &:hover {
-    border-color: var(--c-brand);
+    // border-color: var(--c-brand);
+    box-shadow: 0px 8px 20px rgb(0 0 0 / 6%);
   }
   .title {
     margin: 0;
@@ -47,4 +48,8 @@
     background-color: var(--c-border);
     transition: background-color 0.3s;
   }
+}
+
+.dark .post-item:hover {
+  border-color: var(--c-text-lighter);
 }
