--- a/docs/.vuepress/theme/src/client/styles/vars.scss
+++ b/docs/.vuepress/theme/src/client/styles/vars.scss
@@ -69,6 +69,8 @@
   --sidebar-width-mobile: calc(var(--sidebar-width) * 0.82);
   --content-width: 740px;
   --homepage-width: 960px;
+
+  --code-font-family: var(--font-family-code);
 }
 
 // plugin-back-to-top
