--- a/docs/.vuepress/theme/src/client/styles/tags.scss
+++ b/docs/.vuepress/theme/src/client/styles/tags.scss
@@ -3,8 +3,25 @@
 .tags {
   @extend %wrapper;
   padding-top: var(--navbar-height);
+  .tag-button {
+    border: none;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 2em;
+    line-height: 1.5;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+    background-color: var(--tag-button-bg-color);
+    border-radius: 6px;
+    margin-right: 1em;
+    transition: background-color 0.1s, color 0.1s;
+    &:hover {
+      background-color: var(--tag-button-hover-bg-color);
+    }
+    &.is-active {
+      color: #fff;
+      background-color: var(--tag-button-active-bg-color);
+    }
+  }
 }
 
-.tags-content {
-  
-}
