--- a/docs/.vuepress/theme/src/client/styles/vars-dark.scss
+++ b/docs/.vuepress/theme/src/client/styles/vars-dark.scss
@@ -44,3 +44,10 @@ html.dark .DocSearch {
   --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
     0 -4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+html.dark {
+  .tags {
+    --tag-button-bg-color: rgba(255, 255, 255, .05);
+    --tag-button-hover-bg-color: rgba(255, 255, 255, .1);
+  }
+}
