调整主题色

--- a/docs/.vuepress/theme/src/client/styles/archives.scss
+++ b/docs/.vuepress/theme/src/client/styles/archives.scss
@@ -30,9 +30,10 @@
   font-size: 14px;
   color: #86909c;
   line-height: 1;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
   .link {
     color: inherit;
+    transition: color 0.25s;
     &:hover {
       color: var(--c-text-accent);
     }
