--- a/docs/.vuepress/theme/src/client/styles/tags.scss
+++ b/docs/.vuepress/theme/src/client/styles/tags.scss
@@ -3,6 +3,9 @@
 .tags {
   @extend %wrapper;
   padding-top: var(--navbar-height);
+  .tags-content {
+    padding-bottom: 1.5rem;
+  }
   .tag-button {
     border: none;
     white-space: nowrap;
