--- a/docs/.vuepress/theme/src/client/styles/page.scss
+++ b/docs/.vuepress/theme/src/client/styles/page.scss
@@ -7,11 +7,38 @@ $ContentWidth: var(--content-width) !default;
 .page {
   padding-bottom: 2rem;
   display: block;
-  .vuepress-toc {
-    width: 220px;
-    position: fixed;
-    top: var(--navbar-height);
-    left: calc(50% + ($ContentWidth/2) + 2.5rem);
+}
+
+.vuepress-toc {
+  width: 220px;
+  position: fixed;
+  top: calc(var(--navbar-height) + 1.5rem);
+  left: calc(50% + ($ContentWidth / 2) + 2.5rem);
+  bottom: 2rem;
+  font-size: 14px;
+  .toc-link {
+    @include text-ellipsis;
+    font-weight: normal;
+    color: inherit;
+    border-radius: 4px;
+    padding: 2px 10px;
+    display: inline-block;
+    width: 100%;
+    line-height: 1.55;
+    box-sizing: border-box;
+    transition: background-color 0.25s, color 0.25s;
+  }
+  .toc-h3 a {
+    padding-left: 1.5rem;
+  }
+  .toc-item {
+    &:hover .toc-link {
+      background-color: rgba(0, 0, 0, .05);
+    }
+    &.active .toc-link {
+      background-color: rgba(0, 0, 0, .05);
+      color: var(--c-text-accent);
+    }
   }
 }
 
