--- a/docs/.vuepress/theme/src/client/styles/vars.scss
+++ b/docs/.vuepress/theme/src/client/styles/vars.scss
@@ -147,3 +147,7 @@
   --tag-button-hover-bg-color: rgba(26, 115, 232, .2);
   --tag-button-active-bg-color: var(--c-brand);
 }
+
+.vuepress-toc {
+  --toc-link-active-bg-color: rgba(0, 0, 0, .05);
+}
