让代码键入服务端运行

--- a/docs/.vuepress/theme/src/client/styles/page.scss
+++ b/docs/.vuepress/theme/src/client/styles/page.scss
@@ -14,7 +14,7 @@ $ContentWidth: var(--content-width) !default;
   position: fixed;
   top: calc(var(--navbar-height) + 1.5rem);
   left: calc(50% + ($ContentWidth / 2) + 2.5rem);
-  bottom: 2rem;
+  bottom: 0;
   font-size: 14px;
   overflow: hidden;
   .toc-wrap {
