--- a/docs/.vuepress/theme/src/client/styles/page.scss
+++ b/docs/.vuepress/theme/src/client/styles/page.scss
@@ -28,12 +28,12 @@ $ContentWidth: var(--content-width) !default;
     padding: 2px 10px 3px;
     display: inline-block;
     width: 100%;
-    // line-height: 1.55;
+    line-height: 1.55;
     box-sizing: border-box;
     transition: background-color 0.25s, color 0.25s;
   }
   .toc-h3 a {
-    padding-left: 1.5rem;
+    padding-left: 1.6rem;
   }
   .toc-item {
     &:hover .toc-link {
